--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "vertex360": "latest"
   },
   "devDependencies": {
-    "express": "latest"
+    "express": "^4.16.4"
   },
   "deploy": [
     "."
