--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "content-disposition": "0.5.2",
     "content-type": "^1.0.4",
     "cookie": "0.3.1",
+    "cookie-parser": "^1.4.3",
     "cookie-signature": "1.0.6",
     "debug": "2.6.9",
     "depd": "^1.1.2",
