--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "",
-    "build": ""
+    "build": "npm run clean && gulp prod",
+    "clean": "rimraf ./public/dist"
   },
   "dependencies": {
     "accepts": "^1.3.5",
@@ -60,5 +61,17 @@
   "deploy": [
     "."
   ],
-  "format": "vertex"
+  "format": "vertex",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-6to5": "^3.0.0",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^3.9.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-less": "^4.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0"
+  }
 }
