--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "",
-    "build": "npm run clean && gulp prod",
-    "clean": "rimraf ./public/dist"
+    "build": "npm run clean && gulp prod && gulp copy-public && gulp clean",
+    "clean": "rm -rf ./public/dist && rm -rf ./cdn/public"
   },
   "dependencies": {
     "accepts": "^1.3.5",
