--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "serve-static": "1.13.2",
     "setprototypeof": "1.1.0",
     "statuses": "^1.4.0",
+    "stripe": "^6.28.0",
     "superagent": "^4.0.0",
     "turbo360": "latest",
     "type-is": "^1.6.16",
