--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-signature": "1.0.6",
     "debug": "2.6.9",
+    "deepmerge": "^3.2.0",
     "depd": "^1.1.2",
     "dotenv": "^6.2.0",
     "encodeurl": "^1.0.2",
