--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aws-sdk": "^2.268.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "1.18.2",
+    "cheerio": "^1.0.0-rc.3",
     "cloudfront": "^0.4.1",
     "compression": "^1.7.3",
     "content-disposition": "0.5.2",
@@ -37,6 +38,7 @@
     "mailgun-js": "^0.22.0",
     "merge-descriptors": "1.0.1",
     "methods": "^1.1.2",
+    "moment": "^2.24.0",
     "nodemon": "^1.17.1",
     "on-finished": "^2.3.0",
     "parseurl": "^1.3.2",
