--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "rm -rf ./public/dist && rm -rf ./cdn/public"
   },
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.1",
     "accepts": "^1.3.5",
     "array-flatten": "1.1.1",
     "aws-sdk": "^2.268.1",
