--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0",
   "server": false,
   "private": true,
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.11.3"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "test": "",
